2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h (lll_lock): Load
	futex pointer into RDI_LP.  Use RSP_LP to operate on stack.
	(lll_robust_lock): Likewise.
	(lll_cond_lock): Likewise.
	(lll_robust_cond_lock): Likewise.
	(lll_timedlock): Likewise.
	(lll_robust_timedlock): Likewise.
	(lll_unlock): Likewise.
	(lll_robust_unlock): Likewise.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_signal.S: Use
	LP_OP(cmp) and RCX_LP on dep_mutex pointer.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sem_wait.S: Use LP_OP(op)
	on NWAITERS.
	(__gcc_personality_v0): Replace 8-byte data alignment with
	LP_SIZE alignment and .quad with ASM_ADDR.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sem_timedwait.S: Use LP_OP(op)
	on NWAITERS.
	(__gcc_personality_v0): Replace 8-byte data alignment with
	LP_SIZE alignment and .quad with ASM_ADDR.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sem_post.S: Use LP_OP(cmp) on
	NWAITERS, which is unsigned long int.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_once.S
	(__gcc_personality_v0): Replace 8-byte data alignment with
	LP_SIZE alignment and .quad with ASM_ADDR.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Use
	LP_OP(cmp), RSI_LP and R8_LP on dep_mutex pointer.  Load
	__vdso_clock_gettime pointer into RAX_LP.
	(__gcc_personality_v0): Replace 8-byte data alignment with
	LP_SIZE alignment and .quad with ASM_ADDR.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Use
	LP_OP(cmp), RSI_LP and R8_LP on dep_mutex pointer.  Load
	__vdso_clock_gettime pointer into RAX_LP.
	(__gcc_personality_v0): Replace 8-byte data alignment with
	LP_SIZE alignment and .quad with ASM_ADDR.
